Dark mode almost fixed, pages description added

--- a/public/css/page_css/page_main.css
+++ b/public/css/page_css/page_main.css
@@ -2,6 +2,14 @@ body {
     background-color: var(--bg_color);
 }
 
+.save_button {
+    border: 2px solid #6C3287;
+    border-radius: 10px;
+    box-shadow: 5px 5px #6C3287;
+    background-color: var(--input_bg_color);
+    color: var(--input_color);
+}
+
 .main_box {
     display: flex;
     padding: 40px;
@@ -82,6 +90,10 @@ body {
 
 article{
     min-width: 900px !important;
+}
+
+p {
+    color: black;
 }
 
 .ck-editor__main{
